close. validation is getting in the way

--- a/devinmajordotcom/Views/Home/Index.cshtml
+++ b/devinmajordotcom/Views/Home/Index.cshtml
@@ -16,6 +16,7 @@
 
     @if (Model.CurrentUserViewModel.UserIsAdmin && Model.CurrentUserViewModel.UserIsActive)
     {
+        Model.CurrentApplicationConfig.CurrentUserViewModel = Model.CurrentUserViewModel;
         @Html.Partial("_ApplicationManager", Model.CurrentApplicationConfig)
     }
 
