--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -151,6 +151,22 @@
 
 }
 
+<div class="dontprint modal fade" id="formModalUpdateCredentials" style="z-index: 10000;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title text-center"></h4>
+            </div>
+            <div class="modal-body" id="formModalBodyHolder">
+                @Html.Partial("_UpdateCredentials", Model.CurrentUserViewModel)
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="dontprint modal fade" id="formModalAddEdit" style="z-index: 10000;">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
