--- a/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
+++ b/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
@@ -5,8 +5,8 @@
 @using (Ajax.BeginForm("UpdateCurrentUser", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "UpdateCredentialsSuccess", OnFailure = "UpdateCredentialsFailure" }))
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(x => x.UserIsActive)
-    @Html.HiddenFor(x => x.UserIsAdmin)
+    @Html.HiddenFor(x => x.UserIsActive, new { @id="hiddenActive1"})
+    @Html.HiddenFor(x => x.UserIsAdmin, new { @id = "hiddenAdmin1" })
     @Html.HiddenFor(x => x.UserID, new { @id="UserID4" })
     @Html.HiddenFor(x => x.GUID, new { @id = "hiddenGUID4" })
     @Html.Hidden("IsSigningUp", "True", new { @id = "IsSigningUp4" })
@@ -24,7 +24,7 @@
             <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
         </div>
         <div class="col-sm-12 text-center">
-            @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "UserName2", placeholder = "user_123" })
+            @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "UserName7", placeholder = "user_123" })
         </div>
     </div>
     <br />
