--- a/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
@@ -38,6 +38,7 @@
                                         @Html.HiddenFor(x => x.UserID)
                                         @Html.HiddenFor(x => x.GUID)
                                         @Html.Hidden("IsSigningUp", "True")
+                                        @Html.Hidden("IsUpdatingCredentials", "False")
                                         @*@Html.HiddenFor(x => x.IsSigningUp, new { value="True" })*@
                                         <div class="row">
                                             <div class="col-sm-12 text-left">
