--- a/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
+++ b/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
@@ -10,6 +10,7 @@
     @Html.HiddenFor(x => x.UserID, new { @id="UserID4" })
     @Html.HiddenFor(x => x.GUID, new { @id = "hiddenGUID4" })
     @Html.Hidden("IsSigningUp", "True", new { @id = "IsSigningUp4" })
+    @Html.Hidden("IsUpdatingCredentials", "True", new { @id = "IsUpdatingCredentials4" })
     <div class="row">
         <div class="col-sm-12 text-left">
             <span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.EmailAddress)
