--- a/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
+++ b/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
@@ -9,7 +9,7 @@
     @Html.HiddenFor(x => x.UserIsAdmin, new { @id = "hiddenAdmin1" })
     @Html.HiddenFor(x => x.UserID, new { @id="UserID4" })
     @Html.HiddenFor(x => x.GUID, new { @id = "hiddenGUID4" })
-    @Html.Hidden("IsSigningUp", "True", new { @id = "IsSigningUp4" })
+    @Html.Hidden("IsSigningUp", "False", new { @id = "IsSigningUp4" })
     @Html.Hidden("IsUpdatingCredentials", "True", new { @id = "IsUpdatingCredentials4" })
     <div class="row">
         <div class="col-sm-12 text-left">
