form actions are working perfectly

--- a/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
+++ b/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
@@ -2,6 +2,11 @@
 @{
     var controllerName = (string)ViewBag.ControllerName;
 }
+<style>
+    .form-control {
+        color:white !important;
+    }
+</style>
 @using (Ajax.BeginForm("UpdateCurrentUser", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "UpdateCredentialsSuccess", OnFailure = "UpdateCredentialsFailure" }))
 {
     @Html.AntiForgeryToken()
