--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -160,7 +160,7 @@
                 </button>
                 <h4 class="modal-title text-center"></h4>
             </div>
-            <div class="modal-body" id="formModalBodyHolder">
+            <div class="modal-body" id="formModalBodyHolder" style="color:white !important;">
                 @Html.Partial("_UpdateCredentials", Model.CurrentUserViewModel)
             </div>
         </div>
