--- a/devinmajordotcom/Views/MyHome/_MasterSettingsForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_MasterSettingsForm.cshtml
@@ -19,7 +19,7 @@
 {
 
     @Html.HiddenFor(x => x.UserID)
-    @Html.HiddenFor(x => x.ShowVisitorsAdminHome)
+    @Html.HiddenFor(x => x.ShowVisitorsAdminHome, new { @id = "hiddenOption2" })
     @*@Html.HiddenFor(x => x.AddNewFavoriteImage)
     @Html.HiddenFor(x => x.DefaultFavoriteImage)
     @Html.HiddenFor(x => x.DefaultBlogPostImage)*@
