--- a/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
+++ b/devinmajordotcom/Views/Shared/_UpdateCredentials.cshtml
@@ -1,27 +1,23 @@
 ﻿@model devinmajordotcom.ViewModels.UserViewModel
 @{
     var controllerName = (string)ViewBag.ControllerName;
+    var a = Model;
 }
-<style>
-    .form-control {
-        color:white !important;
-    }
-</style>
-@using (Ajax.BeginForm("UpdateCurrentUser", controllerName, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "UpdateCredentialsSuccess", OnFailure = "UpdateCredentialsFailure" }))
+@using (Ajax.BeginForm("UpdateCurrentUser", controllerName, null, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "UpdateCredentialsSuccess", OnFailure = "UpdateCredentialsFailure" }, new { @id = "updateCredsForm" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.UserIsActive, new { @id="hiddenActive1"})
     @Html.HiddenFor(x => x.UserIsAdmin, new { @id = "hiddenAdmin1" })
     @Html.HiddenFor(x => x.UserID, new { @id="UserID4" })
     @Html.HiddenFor(x => x.GUID, new { @id = "hiddenGUID4" })
-    @Html.Hidden("IsSigningUp", "False", new { @id = "IsSigningUp4" })
-    @Html.Hidden("IsUpdatingCredentials", "True", new { @id = "IsUpdatingCredentials4" })
+    @Html.Hidden("IsSigningUp", "False", new { @id = "IsSigningUp9" })
+    @Html.Hidden("IsUpdatingCredentials", "True", new { @id = "IsUpdatingCredentials9" })
     <div class="row">
         <div class="col-sm-12 text-left">
             <span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.EmailAddress)
         </div>
         <div class="col-sm-12 text-center">
-            @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", @id = "emailUpdate", @required = "required", @type = "email", placeholder = "someone@domain.com" })
+            @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", style= "color:white !important;", @id = "emailUpdate1", @required = "required", @type = "email", placeholder = "someone@domain.com" })
         </div>
     </div>
     <br />
@@ -30,7 +26,7 @@
             <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
         </div>
         <div class="col-sm-12 text-center">
-            @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @id = "UserName7", placeholder = "user_123" })
+            @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", style = "color:white !important;", @id = "UserName7", placeholder = "user_123" })
         </div>
     </div>
     <br />
@@ -39,7 +35,7 @@
             <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
         </div>
         <div class="col-sm-12 text-center">
-            @Html.TextBox("Password", "", new { @class = "form-control", @id = "Password4", @required = "required", @Value = "", placeholder = "********", type = "password" })
+            @Html.TextBox("Password", "", new { @class = "form-control", style = "color:white !important;", @id = "Password9", @required = "required", @Value = "", placeholder = "********", type = "password" })
         </div>
     </div>
     <br />
@@ -48,7 +44,7 @@
             <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.ConfirmedPassword)
         </div>
         <div class="col-sm-12 text-center">
-            @Html.TextBox("ConfirmedPassword", "", new { @class = "form-control", @id = "Password5", @required = "required", @Value = "", placeholder = "********", type = "password" })
+            @Html.TextBox("ConfirmedPassword", "", new { @class = "form-control", style = "color:white !important;", @id = "PasswordConfirm9", @required = "required", @Value = "", placeholder = "********", type = "password" })
         </div>
     </div>
     <br />
