--- a/devinmajordotcom/Content/templatemo-style2.css
+++ b/devinmajordotcom/Content/templatemo-style2.css
@@ -7,6 +7,62 @@ http://www.templatemo.com/tm-509-hydro
 */  
   @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600');
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 24px;
+    top: 10px;
+}
+
+.switch input {display:none;}
+
+.toggleslider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+}
+
+.toggleslider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+}
+
+input[type="checkbox"]:checked + input[type="hidden"] + .toggleslider,
+input[type="checkbox"]:checked + .toggleslider {
+    background-color: #71cef5 !important;
+}
+
+input[type="checkbox"]:focus + input[type="hidden"] + .toggleslider,
+input[type="checkbox"]:focus + .toggleslider {
+    box-shadow: 0 0 1px #71cef5;
+}
+
+input[type="checkbox"]:checked + input[type="hidden"] + .toggleslider:before,
+input[type="checkbox"]:checked + .toggleslider:before {
+    transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.toggleslider.round {
+    border-radius: 34px;
+}
+
+.toggleslider.round:before {
+    border-radius: 50%;
+}
+
 .comment {
     border: 1px solid white; 
     padding: 10px;
