--- a/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
+++ b/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
@@ -1,17 +1,19 @@
 ﻿@model devinmajordotcom.ViewModels.ApplicationConfigViewModel
 @{ 
-
+    ViewBag.ControllerName = "Home";
 }
 <div style="display:none;" class="inner cover" id="appmanager">
     <h1 class="cover-heading">Application Manager</h1>
     <p class="lead" style="color: #71cef5;">Manage settings for all existing apps.</p>   
 
-    @{ 
-        var link = Html.ActionLink("REPLACE", "Logout", null, new { @class="btn btn-primary" }).ToHtmlString();
-        var cleanLink = link.Replace("REPLACE", "<span class='glyphicon glyphicon-log-out'></span>&nbsp;Log Out");
+    <button type="button" onclick="UpdateAccountModal();" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span>&nbsp;Update Account</button>
+
+    @{
+        var link2 = Html.ActionLink("REPLACE", "Logout", null, new { @class = "btn btn-primary" }).ToHtmlString();
+        var cleanLink2 = link2.Replace("REPLACE", "<span class='glyphicon glyphicon-log-out'></span>&nbsp;Log Out");
     }
 
-    @Html.Raw(cleanLink)
+    @Html.Raw(cleanLink2)
 
     @if (Model.LandingPageApplicationLinks != null && Model.LandingPageApplicationLinks.Count > 0)
     {
@@ -49,3 +51,10 @@
         </div>
     }
 </div>
+<script>
+    var updateCredsHtml = '@Html.Raw(@Html.Partial("_UpdateCredentials", Model.CurrentUserViewModel).ToHtmlString().Replace(Environment.NewLine, ""))';
+    $('#formModalUpdateCreds').html(updateCredsHtml);
+    $.validator.unobtrusive.parse('#updateCredsForm');
+    $("#IsUpdatingCredentials9").val(true);
+    $("#IsUpdatingCredentials9").attr("value", "True");
+</script>
