--- a/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
+++ b/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
@@ -16,37 +16,13 @@
             @class = "btn btn-default",
             @onClick = "ResetActiveImage(this)"
         }).ToHtmlString().Replace("REPLACE", "<span class=\"fa fa-upload\"></span>&nbsp;&nbsp;Change Image...");
-
+    ViewBag.ControllerName = "Home";
 }
 
 <div class="appContainer work-wrapper" style="background:transparent;" id="mainSettingsContainer">
     <h3>Landing Page Settings</h3>
     <hr>
     <div class="settingsContainer">
-        
-    <div class="panel panel-default" style="margin-bottom: 1vh; -webkit-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245, 245, 245, 1); -moz-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245, 245, 245, 1); box-shadow: 2.5px 2.5px 5px 2.5px rgba(245, 245, 245, 1);">
-        <div class="panel-heading portfolioPanelHeading" data-toggle="collapse" href="#collapseMain1">
-            <span class="glyphicon glyphicon-collapse-up glyphicon-collapse-down"></span>
-            &nbsp;&nbsp;
-            <h4 class="panel-title" style="display: inline;">
-                <a>Manage Account</a>
-            </h4>
-        </div>
-        <div id="collapseMain1" class="panel-collapse collapse">
-            <div class="panel-body">
-                @if (Model.CurrentUserViewModel != null)
-                {
-                    @Html.Partial("_UpdateCredentials", Model.CurrentUserViewModel)
-                }
-                else
-                {
-                    <p>Sorry, there is nothing here! This is probably because this is your first time using the settings page. Please refresh the page to see the Manage Account content.</p>
-                }
-            </div>
-        </div>
-    </div>
-
-    <br />
 
     @using (Ajax.BeginForm("ManageLandingPage", "Home", new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "ManageMainSettingsAjaxSuccess", OnFailure = "ManageMainSettingsAjaxFailure" }))
         {
