--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -113,6 +113,22 @@
     </div>
 </div>
 
+<div class="dontprint modal fade" id="formModalUpdateCredentials" style="z-index: 10000;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title text-center"></h4>
+            </div>
+            <div class="modal-body" id="formModalUpdateCreds">
+                @Html.Partial("_UpdateCredentials", userViewModel)
+            </div>
+        </div>
+    </div>
+</div>
+
 @Html.Partial("_AdminLoginModal", userViewModel)
 
 <div id="ajaxAlertContainer"></div>
