datetimepicker works for now

--- a/devinmajordotcom/Views/Portfolio/_ManageCareerAndAcademics.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManageCareerAndAcademics.cshtml
@@ -107,7 +107,7 @@
                                         </div>
                                         <div class="col-sm-12 text-center">
                                             <div class="form-group">
-                                                <div class='input-group date' id='date1'>
+                                                <div class='input-group date'>
                                                     @Html.TextBoxFor(x => x.Academics[count].StartDate, new { @class = "form-control datetimepicker" })
                                                     <span class="input-group-addon">
                                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -125,7 +125,7 @@
                                         </div>
                                         <div class="col-sm-12 text-center">
                                             <div class="form-group">
-                                                <div class='input-group date' id='date2'>
+                                                <div class='input-group date'>
                                                     @Html.TextBoxFor(x => x.Academics[count].EndDate, new { @class = "form-control datetimepicker" })
                                                     <span class="input-group-addon">
                                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -238,7 +238,7 @@
                                         </div>
                                         <div class="col-sm-12 text-center">
                                             <div class="form-group">
-                                                <div class='input-group date' id='date3'>
+                                                <div class='input-group date'>
                                                     @Html.TextBoxFor(x => x.Jobs[count].StartDate, new { @class = "form-control datetimepicker" })
                                                     <span class="input-group-addon">
                                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -256,7 +256,7 @@
                                         </div>
                                         <div class="col-sm-12 text-center">
                                             <div class="form-group">
-                                                <div class='input-group date' id='date4'>
+                                                <div class='input-group date'>
                                                     @Html.TextBoxFor(x => x.Jobs[count].EndDate, new { @class = "form-control datetimepicker" })
                                                     <span class="input-group-addon">
                                                         <span class="glyphicon glyphicon-calendar"></span>
