--- a/devinmajordotcom/Views/Portfolio/_NewAcademic.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_NewAcademic.cshtml
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col-sm-12 text-center">
                         <div class="form-group">
-                            <div class="input-group date" id="date{{newLinkCounter}}">
+                            <div class="input-group date">
                                 <input class="form-control datetimepicker" data-val="true" data-val-date="The field Start Date :  must be a date." id="Academics_{{newID}}__StartDate" name="Academics[{{newID}}].StartDate" type="text" value="">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar" style=""></span>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-sm-12 text-center">
                         <div class="form-group">
-                            <div class="input-group date" id="date2">
+                            <div class="input-group date">
                                 <input class="form-control datetimepicker" data-val="true" data-val-date="The field End Date :  must be a date." id="Academics_{{newID}}__EndDate" name="Academics[{{newID}}].EndDate" type="text" value="">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar" style=""></span>
