--- a/devinmajordotcom/Views/Portfolio/Index.cshtml
+++ b/devinmajordotcom/Views/Portfolio/Index.cshtml
@@ -229,7 +229,7 @@
                                         {
                                             timeString += "<span class='datetime'>" + academic.EndDate + "</span>";
                                         }
-                                        timeString += " (x Years)</p></li>";
+                                        timeString += "</p></li>";
                                         @Html.Raw(timeString)
                                     }
                                 }
