--- a/devinmajordotcom/Views/MediaDashboard/_DashboardCSS.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_DashboardCSS.cshtml
@@ -10,7 +10,7 @@
         transition: all 0.3s;
         min-width: 250px;
         max-width: 250px;
-        min-height: 100vh;
+        min-height: auto;
     }
 
     #sidebar ul li a:hover {
