--- a/devinmajordotcom/Views/Portfolio/Index.cshtml
+++ b/devinmajordotcom/Views/Portfolio/Index.cshtml
@@ -281,7 +281,7 @@
                                             {
                                                 timeString += "<span class='datetime'>" + job.EndDate + "</span>";
                                             }
-                                            timeString += " (x Years)</p></li>";
+                                            timeString += "</p></li>";
                                             @Html.Raw(timeString)
                                         }
                                     }
