--- a/devinmajordotcom/Views/Home/_ServerStatusGraphs.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatusGraphs.cshtml
@@ -1,26 +1,6 @@
 ﻿@model devinmajordotcom.ViewModels.ServerDataViewModel
 @{
     var config = Model.LandingPageBannerLinks.FirstOrDefault(x => x.IsEnabled && x.URL == "#server");
-    var lineCharts = new List<LineChart>();
-
-    foreach(var graph in Model.GraphList)
-    {
-        var chart = new LineChart();
-        chart.ComplexData.Labels.AddRange(graph.Labels);
-        var data = new ComplexDataset {
-            Data = graph.Values,
-            Label = "My First dataset",
-            FillColor = "rgba(220,220,220,0.2)",
-            StrokeColor = "rgba(220,220,220,1)",
-            PointColor = "rgba(220,220,220,1)",
-            PointStrokeColor = "#fff",
-            PointHighlightFill = "#fff",
-            PointHighlightStroke = "rgba(220,220,220,1)",
-        };
-        chart.ComplexData.Datasets.Add(data);
-        lineCharts.Add(chart);
-    }
-    var count = 0;
 }
 
 <div class="inner cover" id="serverGraphs">
@@ -43,27 +23,25 @@
 
     <div class="row">
         <div class="col-sm-12 text-center">
-            @foreach (var chart in lineCharts)
-            {
-                <canvas id="myCanvas_@count" style="width:100% !important; height:100% !important;" width="400" height="400"></canvas>
-                count++;
-            }
+            <div id="chartContainer">
+                <canvas id="cpuLoadChart" width="400" height="400"></canvas>
+                <canvas id="ramLoadChart" width="400" height="400"></canvas>
+                <canvas id="cpuTempChart" width="400" height="400"></canvas>
+            </div>
         </div>
     </div>
-
-    @{ 
-        count = 0;
-    }
-
-    @foreach (var chart in lineCharts)
-    {
-        @Html.CreateChart("myCanvas_" + count, chart)
-        count++;
-    }
 
 </div>
 
 <script type="text/javascript">
+
+    var firstRun1 = true;
+    var labels = [];
+    var cpuLoadLineGraph, ramLoadLineGraph, cpuTempLineGraph;
+
+    for (var i = 1; i <= 60; i++) {
+        labels.push(i.toString());
+    }
 
     $(document).ready(function () {
 
@@ -72,44 +50,154 @@
 
     });
 
-    function ConnectToSignalRPerformanceHistoryHub() {
+    function addData(chart, data) {
+        chart.data.datasets[0].data.pop();
+        chart.data.datasets[0].data = data;
+        chart.update(0);
+    }
 
-        debugger;
+    function ConnectToSignalRPerformanceHistoryHub() {
 
         var performanceHistoryHub = $.connection.performanceHistoryHub;
 
         performanceHistoryHub.client.updatePerformanceHistory = function (cpuList, nextCpuValues, nextRamValues, temps) {
 
-            debugger;
+            var counter = 0;
 
-            myCanvas_0_chart.clear();
-            myCanvas_1_chart.clear();
-            myCanvas_2_chart.clear();
+            if (firstRun1) {
 
-            myCanvas_0_chart.addData(nextCpuValues);
+                var ctx1 = document.getElementById("cpuLoadChart");
+                var ctx2 = document.getElementById("ramLoadChart");
+                var ctx3 = document.getElementById("cpuTempChart");
 
-            myCanvas_1_chart.addData(nextRamValues);
+                cpuLoadLineGraph = new Chart(ctx1, {
+                    type: 'line',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: 'CPU Usage',
+                            data: nextCpuValues,
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(255,99,132,1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                });
 
-            myCanvas_2_chart.addData(temps);
+                ramLoadLineGraph = new Chart(ctx2, {
+                    type: 'line',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: 'RAM Usage',
+                            data: nextRamValues,
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(255,99,132,1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                });
 
-            //if (firstRun) {
+                cpuTempLineGraph = new Chart(ctx3, {
+                    type: 'line',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: 'CPU Temperature',
+                            data: temps,
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(255,99,132,1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                });
 
+                firstRun1 = false;
 
+            }
+            else {
+                addData(cpuLoadLineGraph, nextCpuValues);
+                addData(ramLoadLineGraph, nextRamValues);
+                addData(cpuTempLineGraph, temps);
 
-            //} else {
+            }
 
+            
 
-
-            //}
-
-            var counter1 = 0;
-
-            firstRun = false;
+            
 
         };
 
         $.connection.hub.start().done(function () {
-            debugger;
             performanceHistoryHub.server.SendPerformanceHistory();
         }).fail(function (reason) {
             $("#ajaxAlertContainer").bootsnack({
